@@ -112,9 +112,6 @@ class ArrayExpression extends AbstractExpression
                 }
 
                 if ($nextIndex !== $key) {
-                    if (\is_int($key)) {
-                        $nextIndex = $key + 1;
-                    }
                     $compiler
                         ->subcompile($pair['key'])
                         ->raw(' => ')
