@@ -50,6 +50,11 @@ Twig supports array notation
 {{ does_not_exist[0]|default('ok') }}
 {{ does_not_exist[0].does_not_exist_either|default('ok') }}
 {{ does_not_exist[0]['does_not_exist_either']|default('ok') }}
+
+{# indexes are kept #}
+{% set trad = {194:'ABC',141:'DEF',100:'GHI',170:'JKL',110:'MNO',111:'PQR'} %}
+{% set trad2 = {'194':'ABC','141':'DEF','100':'GHI','170':'JKL','110':'MNO','111':'PQR'} %}
+{{ trad == trad2 ? 'OK' : 'KO' }}
 --DATA--
 $objectStorage = new SplObjectStorage();
 $object = new stdClass();
@@ -84,6 +89,8 @@ bar
 ok
 ok
 ok
+
+OK
 --DATA--
 return ['bar' => 'bar', 'foo' => ['bar' => 'bar'], 'array_access' => new \ArrayObject(['a' =>  'b']), 'object' => new stdClass()]
 --CONFIG--
@@ -117,3 +124,5 @@ bar
 ok
 ok
 ok
+
+OK
