@@ -1,5 +1,6 @@
 # 3.20.0 (2025-XX-XX)
 
+ * Fix wrong array index
  * Bump minimum PHP version to 8.1
 
 # 3.19.0 (2025-01-28)
